fixed footer url

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <div>
           <h3 style="text-align: right;">+00 123 584 124</h3>
-          <h3><a href="https://shuvodipdashimu.github.io/new-year-offer-resources/">https://shuvodipdashimu.github.io/new-year-offer-resources/</a></h3>
+          <h3><a href="https://shuvodipdashimu.github.io/new-year-2025/">https://shuvodipdashimu.github.io/new-year-2025/</a></h3>
         </div>
       </div>
       <hr>
